[tool.poetry]
name = "waakaka"
version = "0.1"
description = "Wie groß ist deine Schokoladenseite?"
authors = [
    "cwellm <christoph.wellm@creaflect.de>",
    "Emmiwinks <>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
